# SimpleVulkanRenderer

./: .cmake-format.yaml  CMakeLists.txt  README.md  vcpkg.json
examples/: CMakeLists.txt
examples/simple_context_app/: CMakeLists.txt  color_renderer.cpp  color_renderer.hpp  win32_main.cpp
examples/simple_win32_window/: CMakeLists.txt  win32_main.cpp
examples/vk_info/: CMakeLists.txt  main.cpp
include/svr/: vulkan_simple_context.hpp
src/: svr.cpp  vulkan_simple_context.cpp
tests/: CMakeLists.txt
